add posts of wpf

--- a/_posts/IT/技术专题/UI/-2015-06-15-wpf-mvvm.md
+++ b/_posts/IT/技术专题/UI/-2015-06-15-wpf-mvvm.md
@@ -33,6 +33,8 @@ revision:
     - binding xml
     - binding ado.net
 
+源文件siteoforigin类型资源uri只能用绝对路径，不能简写
+
 # WPF command
 
 传统事件情况下，会为按钮事件和快捷键方式都创建两个事件(虽然使用的是同一个PrintDocument()方法)，同时还要考虑快捷键是否会需要使用进行判断(原因是按钮的启用状态和快捷键启用状态并不是同步的);
