--- a/_posts/Design/CAX/CAD/2012-10-10-3d-model.md
+++ b/_posts/Design/CAX/CAD/2012-10-10-3d-model.md
@@ -10,7 +10,7 @@ description: 三维建模基础知识
 author: lileilei
 revision:
     editor: lileilei
-    date: 2012-10-10
+    date: 2016-10-10
 ---
 
 
@@ -29,15 +29,21 @@ revision:
 + 自底向上法：由最基本的元素开始，由点到线，由线到面，由面到体的方法。
 + 自顶向下法：建立基本图形(几何体)，通过基本图形通过相互加、减或组合得到模型。
 
+现在还有一种特殊的建模方法，可能也可以认为是自顶向下法，就是雕刻或者捏泥巴一样，把一个曲面通过特殊的凸凹修剪操作创造造型。这种方法在人体动物建模方面用的比较多，也适合艺术领域。
 
 # 通用3d图形交换格式
 
-+ IGES(`*.igs;*.iges`)
-+ STEP(`*.stp;*.step`)
-+ ACIS(`*.sat`)
-+ Parasolid(`*.x_t;*.x_b`)
-+ AutoDesk(`*.dxf`)
+~~~ text
+ IGES(*.igs;*.iges)
+ STEP(*.stp;*.step)
+ ACIS(*.sat)
+ Parasolid(*.x_t;*.x_b)
+ Autodesk(*.dxf)
+~~~
 
+IGES、STEP是工业级的通用的CAD格式；ACIS、Parasolid是目前工程领域最著名的应用最广的2个三维建模引擎的格式，不少软件用的就是这2个引擎内核，所以支持也比较多；Autodesk的软件是2维工程图、建筑等领域应用最广的软件，所以dxf也是一种很常见的格式。
+
+以上格式事实上主要还是工程领域软件的交换格式，在动画、多媒体、电影领域好像一般不用这些格式。
 
 # 通用三维软件
 
@@ -54,8 +60,14 @@ revision:
     + Proe
     + UG
     + Catia
+    + 汽车等曲面质量要求高的领域，A及曲面软件
+        - Alias
+        - ICEM Surf
 2. 媒体类
     + 3dmax
     + Maya
     + SoftImage
     + Cinema 4D
+    + 雕刻建模类软件
+        - Zbrush
+        - Mudbox
