change code style(add line number)

--- a/_posts/Basic/PKM/2014-08-12-PKM-tools.md
+++ b/_posts/Basic/PKM/2014-08-12-PKM-tools.md
@@ -30,15 +30,16 @@ revision:
 收集学习→分类保存→提炼共享→应用备份
 
 + 收集学习
-    - evernote 网页收集
     - 百度文库/豆丁书房 书籍收集
     - 下载pdf书 纸质书籍等
+    - 有道云 随手记录 学习备忘
 + 分类保存
     - freecommander 硬盘分类
     - baiduyun 备份
 + 提炼共享
-    - jekyll+github(网络公开分享) / pandoc(转换为office，pdf格式分享)
-    - onenote(个人非公开知识）
+    - jekyll+github(网络公开分享)/jekyll+coding.net
+    - pandoc(转换为office，pdf格式分享)
+    - onenote(个人非公开备忘）
 + 应用备份
     - svn(code.taobao.org)
 
