edit pkm posts, change date format

--- a/_posts/Basic/PKM/2014-08-10-PKM-basic.md
+++ b/_posts/Basic/PKM/2014-08-10-PKM-basic.md
@@ -18,13 +18,11 @@ revision:
 
 # PKM简介
 
-PKM是Personal Knowledge Management简称，个人知识管理。
-
-对于每个人而言，人类的知识总量可以看做是无限的，而个人能够掌握的知识是有限的。我们工作中经常会遇到在需要的时候找不到某个资料(比如某个报告、某个公式、某篇文章)，从而浪费大量时间。在网络高度发达的今天，我们还经常会在网络上下载大量书籍，但是却没有几本书认真看完过，事实上几十G，几百G的资料，一个人基本上是看不完的。本人就有这样的恶习，每见到看上去“高大上”或者个人专业、兴趣相关的书籍文章就下载，但是在下载了大量书籍之后，发现需要的时候仍然找不到，或者用过的知识，再次用时忘记了还需要重新找资料学习一边。因此，必须要进行个人知识管理，尤其是内容管理。
+PKM是Personal Knowledge Management简称，即个人知识管理。对于每个人而言，人类的知识总量可以看做是无限的，而个人能够掌握的知识是有限的。我们在日常生活工作中，总是要不断的学习各种知识，见到有用的资料也要不断收集。但是面对海量的知识，仅靠记忆是很难完全掌握的。我们工作中经常会遇到在需要的时候找不到某个资料(比如某个报告、某个公式、某篇文章)，即使曾经看过很多次也还是有可能在需要的时候找不到，从而浪费大量时间。在网络高度发达的今天，我们还经常会在网络上下载大量书籍，但是却没有几本书认真看完过，事实上几十G，几百G的资料，一个人基本上是看不完的。本人就有这样的恶习，每见到看上去“高大上”或者个人专业、兴趣相关的书籍文章就下载，但是在下载了大量书籍之后，发现需要的时候仍然找不到，或者用过的知识，再次用时忘记了还需要重新找资料学习一遍。因此，必须要进行个人知识管理，尤其是内容管理。
 
 # PKM组成
 
-PKM由CM、CM、TM、IM四部分组成。
+PKM由CM(联系管理)、CM(内容管理)、TM(时间管理)、IM(咨询管理)四部分组成。
 
 ## 联系管理（Contact Management）
 
@@ -34,7 +32,7 @@ PKM由CM、CM、TM、IM四部分组成。
 + 海量分组：把海量联系人分解成尽可能细致的分组，易查易找。
 + 精确检索：事件触发时，能很快定位渠道和联系人。时间要快，匹配成功率要高。
 
-> 这个我用的主要是和通讯录，微信，QQ。
+> 我用的主要是和通讯录，微信，QQ。
 
 ## 内容管理（Content Management）
 
@@ -43,7 +41,7 @@ PKM由CM、CM、TM、IM四部分组成。
 + 项目管理：对正在进行的工作、生活、学习等的项目过程性资料和过程控制必要的各类阶段性文件进行阶段性分类整理。
 + 个人博客：对个人的人生感悟进行归类、存储、公开交流，丰富自我，提升修养。
 
-> 这个我用的主要是硬盘、github、百度云、文库等。
+> 这个我用的主要是硬盘、github、百度云、云笔记、文库等。
 
 ## 时间管理（Time Management）
 
@@ -52,7 +50,7 @@ PKM由CM、CM、TM、IM四部分组成。
 + 计划管理：以月为单位，本月月末，总结本月的工作、生活、学习情况，制订下一个月的各项计划。
 + 生命管理：以季为单位，年度职业目标、生活目标、学习目标；每天的挑战性工作、错落有致的生活、沉醉自得的学习。
 
-> 这个我用的主要是随笔记、word。
+> 我用的主要是随笔记、高效待办清单、微提醒等。
 
 ## 资讯管理（Information Management）
 
@@ -60,7 +58,7 @@ PKM由CM、CM、TM、IM四部分组成。
 + 每天必看：每天都必须浏览的n个网站。
 + 定期必访：定期不定期必须访问的n个网站。
 
-> 这个我用的主要是网易新闻、360极速浏览器导航页面。
+> 我用的主要是浏览器收藏夹、手机新闻。
 
 # PKM内容管理过程
 
