--- a/_posts/Basic/PKM/2014-08-12-PKM-tools.md
+++ b/_posts/Basic/PKM/2014-08-12-PKM-tools.md
@@ -18,16 +18,23 @@ revision:
 
 
 # CM过程简介
+内容管理最根本的目的是为了更加方便的掌握和使用知识。cm是融入我们生活工作和学习的每一个细节中的，所以内容管理重要的不是工具，而是过程。一般来说cm过程包括:
 
 学习（获取）→保存（积累）→共享→应用→创新
 
 # 个人主要做法
 
-曾经试用过PKM2，针式PKM等软件，感觉太粗暴，不习惯。最后得出结论PKM并不局限于某一个软件，而主要在于个人管理的过程，实用方便就好，尽量挑选顺手的工具，与生活中进行整理，可以使用多种工具组合使用，不必太过于在意软件是不是专业PKM软件，事实上，草稿本、微信等都可以是很有效的工具。
+虽然cm最重要的是要用心的学习、分类和应用知识，但使用顺手的软件工具能更加有效率。
+
+最初我试用过PKM2，针式PKM等软件，倒是感觉太粗暴，不习惯。后来才明白PKM并不需要局限于某一个软件，而主要在于个人管理的过程，实用方便就好，尽量挑选顺手的工具。内容管理可以使用多种工具组合使用，事实上，草稿本、微信等都可以是很有效的工具。
 
 ## 主要过程及工具
 
+我个人在我的cm过程中，精简为以下4个过程:
+
 收集学习→分类保存→提炼共享→应用备份
+
+个人在使用过程中不断对比各种工具后，发现了不少好的工具和方式，以下就是我习惯使用的软件工具:
 
 + 收集学习
     - 百度文库/豆丁书房 书籍收集
@@ -37,7 +44,7 @@ revision:
     - freecommander 硬盘分类
     - baiduyun 备份
 + 提炼共享
-    - jekyll+github(网络公开分享)/jekyll+coding.net
+    - jekyll+github/jekyll+coding.net(网络公开分享)
     - pandoc(转换为office，pdf格式分享)
     - onenote(个人非公开备忘）
 + 应用备份
@@ -49,6 +56,3 @@ revision:
 + freemind：思维导图
 + 为知笔记：linux学习同步
 + 百度、搜狗、360浏览器同步
-
-
-
