fix linux post group

--- a/_posts/IT/操作系统/linux/2016-12-15-linux-gui.md
+++ b/_posts/IT/操作系统/linux/2016-12-15-linux-gui.md
@@ -1,8 +1,9 @@
 ---
 layout: post
 title: linux桌面
-category: 操作系统
-tags: [linux]
+group: IT
+category: linux
+tags: [linux, 操作系统]
 keywords: [linux]
 description: linux桌面, unity, Gnome, KDE, Cinnamon, MATE, Lxde, Xfce
 
