修改新加post错误

--- a/_posts/IT/操作系统/linux/2016-12-12-linux-os.md
+++ b/_posts/IT/操作系统/linux/2016-12-12-linux-os.md
@@ -1,8 +1,8 @@
 ---
 layout: post
 title: 各种linux操作系统汇总简介
-category: 操作系统
 group: IT
+category: linux
 tags: [linux]
 keywords: [linux, ubuntu, debian, gentoo, mandriva, redhat, fedora, centos, slackware, opensuse, archlinux]
 description: linux操作系统，linux
