--- a/_posts/Design/CAX/CAD/2012-10-10-3d-model.md
+++ b/_posts/Design/CAX/CAD/2012-10-10-3d-model.md
@@ -1,10 +1,10 @@
 ---
 layout: post
 title: 三维建模
-category: [CAD]
+category: [3d建模]
 group: Design
-tags: [CAX]
-keywords: [CAD, 三维建模]
+tags: [3d]
+keywords: [3d建模]
 description: 三维建模基础知识
 
 author: lileilei
